Add some fixes to node dev provision

--- a/ansible/reset.yaml
+++ b/ansible/reset.yaml
@@ -1,7 +1,2 @@
-- name: Restart node
-  hosts: nodes
-  roles:
-    - role: cleanup
-    - role: sources
-    - role: skale-cli
-    - role: node
+- import_playbook: wallets.yaml
+- import_playbook: restart.yaml
