--- a/ansible/roles/cleanup/tasks/main.yaml
+++ b/ansible/roles/cleanup/tasks/main.yaml
@@ -1,3 +1,14 @@
+- name: Cleanup contracts
+  script: cleanup_contracts.py
+  run_once: yes
+  environment:
+    BASE_DIR: "{{ base_path }}"
+    ETH_PRIVATE_KEY: "{{ eth_private_key }}"
+    ENDPOINT: "{{ endpoint }}"
+  args:
+    executable: python3
+  tags: cleanup
+
 - name: Get all container ids
   command: "docker ps -aq"
   register: containers_output
@@ -25,14 +36,3 @@
     state: absent
   tags:
     - cleanup
-
-- name: Cleanup contracts
-  script: cleanup_contracts.py
-  run_once: yes
-  environment:
-    BASE_DIR: "{{ base_path }}"
-    ETH_PRIVATE_KEY: "{{ eth_private_key }}"
-    ENDPOINT: "{{ endpoint }}"
-  args:
-    executable: python3
-  tags: cleanup_contracts
