--- a/ansible/roles/sources/tasks/main.yaml
+++ b/ansible/roles/sources/tasks/main.yaml
@@ -2,16 +2,19 @@
   synchronize:
     src: "{{ skale_admin_path }}"
     dest: "{{ base_path }}"
+  when: env is defined and env == "dev"
     
 - name: Synchronization of transaction-manager repo
   synchronize:
     src: "{{ transaction_manager_path }}"
     dest: "{{ base_path }}"
+  when: env is defined and env == "dev"
 
 - name: Synchronization of skale-node repo
   synchronize:
     src: "{{ skale_node_path }}"
     dest: "{{ base_path }}"
+  when: env is defined and env == "dev"
 
 - name: Synchronization of skale-node-cli repo
   synchronize:
@@ -22,6 +25,7 @@
   template:
     src: docker-compose.yml.j2
     dest: "{{ base_path }}/skale-node/docker-compose.yml"
+  when: env is defined and env == "dev"
 
 - name: Remove existent .env content
   shell: "echo '' > {{ base_path }}/skale-node-cli/.env"
@@ -45,7 +49,9 @@
     - { name: FILEBEAT_HOST, value: "{{ filebeat_host }}"}
     - { name: MANAGER_CONTRACTS_INFO_URL, value: "{{ manager_contracts }}"}
     - { name: IMA_CONTRACTS_INFO_URL, value: "{{ ima_contracts }}"}
-    - { name: DKG_CONTRACTS_INFO_URL, value: "{{ dkg_contracts }}"}
+    #    - { name: DKG_CONTRACTS_INFO_URL, value: "{{ dkg_contracts }}"}
+    - { name: DISK_MOUNTPOINT, value: "{{ block_device }}"}
+    - { name: SGX_SERVER_URL, value: "{{ sgx_url }}"}
 
 - name: Download contracts from digitalocean
   get_url:
