--- a/ansible/roles/node/tasks/init.yaml
+++ b/ansible/roles/node/tasks/init.yaml
@@ -1,9 +1,8 @@
 - name: Run init skale-node init
   command: 
     chdir: "{{ base_path }}/skale-node-cli"
-    cmd: "skale node init  --install-deps --disk-mountpoint {{ block_device }} --sgx-url {{ sgx_url }} --env-file {{ base_path }}/skale-node-cli/.env"
+    cmd: "skale node init  --install-deps --env-file {{ base_path }}/skale-node-cli/.env"
   environment:
-    SKALE_NODE_SOURCE: "{{ base_path }}/skale-node"
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
   when: env is defined and env == "dev"
