Move install scripts from skale-node

--- a/ansible/roles/node/tasks/init.yaml
+++ b/ansible/roles/node/tasks/init.yaml
@@ -16,7 +16,7 @@
     LC_ALL: en_US.utf-8
   when: env is defined and env != "dev"
 
-- name: Pause to make sure skale-admin genereate user token
+- name: Pause to make sure skale-admin exchange certs with sgx server
   pause:
     seconds: 60
 
