--- a/ansible/roles/cleanup/tasks/main.yaml
+++ b/ansible/roles/cleanup/tasks/main.yaml
@@ -7,7 +7,11 @@
     ENDPOINT: "{{ endpoint }}"
   args:
     executable: python3
-  tags: cleanup
+    tags: cleanup
+
+- name: Install docker.py
+  pip:
+    name: docker==4.2.0
 
 - name: Get all container ids
   command: "docker ps -aq"
