--- a/ansible/roles/validators/tasks/main.yaml
+++ b/ansible/roles/validators/tasks/main.yaml
@@ -1,16 +1,19 @@
 - name: Get skale wallet info output 
-  command: skale wallet info -f json"
-  register: wallet_data_json 
+  command: "skale wallet info -f json"
+  register: wallet_data_json
   
 - name: Get validator base private key
-  command: cat "{{ base_path }}"
+  command: cat "{{ base_path }}/base_key.txt"
   register: validator_key
 
 - name: Get address from wallet_data_json
   set_fact: address=(wallet_data_json.stdout | from_json).address
 
 - name: Link address to validator
-  script: link_address.py
+  script:
+    cmd: link_address.py "{{ address }}"
   environment:
-    ETH_PRIVATE_KEY="{{ validator_key.stdout }}"
-    ENDPOINT="{{ endpoint }}"
+    ETH_PRIVATE_KEY: "{{ validator_key.stdout }}"
+    ENDPOINT: "{{ endpoint }}"
+  args:
+    executable: python3
