--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -9,7 +9,6 @@
     - role: skale-cli
       tags: cli
 
-    - role: node
+    - role: init
       tags: 
-        - node
-        - sync
+        - init
