--- a/ansible/wallets.yaml
+++ b/ansible/wallets.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Install skale.py
       pip:
-        name: skale.py==3.0dev20
+        name: skale.py==2.1b4
 
     - name: Download contracts from digitalocean
       get_url:
@@ -17,7 +17,7 @@
       throttle: 1
       environment:
         BASE_DIR: "{{ base_path }}"
-        SKALE_AMOUNT: "1"
+        SKALE_AMOUNT: "100"
         ETH_AMOUNT: "5"
         ETH_PRIVATE_KEY: "{{ eth_private_key }}"
         ENDPOINT: "{{ endpoint }}"
