--- a/ansible/wallets.yaml
+++ b/ansible/wallets.yaml
@@ -4,7 +4,7 @@
   tasks:
     - name: Install skale.py
       pip:
-          name: skale.py==2.1dev14
+          name: skale.py==2.1b4
 
     - name: Download contracts from digitalocean
       get_url:
