--- a/ansible/roles/init/tasks/main.yaml
+++ b/ansible/roles/init/tasks/main.yaml
@@ -1,7 +1,6 @@
 - name: Run skale node init
   command: 
-    chdir: "{{ base_path }}/skale-node-cli"
-    cmd: "skale node init  --install-deps --env-file {{ base_path }}/skale-node-cli/.env"
+    cmd: "skale node init  --install-deps --env-file {{ base_path }}/init-env"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
