--- a/ansible/roles/validators/tasks/link_addresses.yaml
+++ b/ansible/roles/validators/tasks/link_addresses.yaml
@@ -1,6 +1,10 @@
 - name: Get skale wallet info output 
   command: "skale wallet info -f json"
   register: wallet_data_json
+  environment:
+    LC_ALL: "C.UTF-8"
+    LANG: "C.UTF-8"
+
   
 - name: Get validator base private key
   command: cat "{{ base_path }}/base_key.txt"
