--- a/ansible/roles/cleanup/tasks/main.yaml
+++ b/ansible/roles/cleanup/tasks/main.yaml
@@ -11,17 +11,20 @@
 
 - name: Get all container ids
   command: "docker ps -aq"
+  become: true
   register: containers_output
   tags: 
     - cleanup
 
 - name: Split containers ids output 
+  register: containers_output
   set_fact:
     containers_ids: "{{ containers_output.stdout.split('\n') }}"
   tags: 
     - cleanup
 
 - name: Destroy all containers
+  become: true
   docker_container: 
     name: "{{ item }}"
     state: absent
@@ -31,6 +34,7 @@
     - cleanup
 
 - name: Remove .skale directory
+  become: true
   file:
     path: "{{ base_path }}/.skale"
     state: absent
