--- a/ansible/link-addresses.yaml
+++ b/ansible/link-addresses.yaml
@@ -1,5 +1,6 @@
 - name: Link sgx wallet address to validator
   hosts: nodes
+  become: true
   tasks:
     - name: Importing link-addresses.yaml from validators role
       import_role:
