--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ ansible/my-inventory
 ansible/inventory/
 ansible/files/base-keys.txt
 ansible/files/validator-ids.txt
-ansible/terraform/hosts
+ansible/terraform/do/hosts
+ansible/terraform/aws/hosts
 
 # other
 .ropeproject/
