--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ ansible/files/base-keys.txt
 ansible/files/validator-ids.txt
 ansible/terraform/do/hosts
 ansible/terraform/aws/hosts
+ansible/terraform/vultr/hosts
+ansible/terraform/vultr/authorized_keys
+ansible/terraform/vultr/post_install/hosts_info.json
+ansible/ansible.cfg
 
 # other
 .ropeproject/
