--- a/ansible/roles/validators/tasks/generate.yaml
+++ b/ansible/roles/validators/tasks/generate.yaml
@@ -26,7 +26,7 @@
 
 
 - name: Save base keys to remote servers 
-  command: 'ssh -i {{ pem_cert_path }} ubuntu@{{ item.0 }} "echo {{ item.1 }} | sudo tee {{ base_path }}/base_key.txt"'
+  command: 'ssh root@{{ item.0 }} "echo {{ item.1 }} | sudo tee {{ base_path }}/base_key.txt"'
   with_together:
     - "{{ hosts }}"
     - "{{ lookup('file', 'files/base-keys.txt').splitlines() }}"
