--- a/ansible/roles/init/tasks/main.yaml
+++ b/ansible/roles/init/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Run skale node init
   command: 
-    cmd: "skale node init  --install-deps --env-file {{ base_path }}/init-env"
+    cmd: "skale node init {{ base_path }}/init-env --install-deps"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
@@ -8,5 +8,5 @@
 
 - name: Pause to make sure skale-admin exchange certs with sgx server
   pause:
-    seconds: 60
+    seconds: 120
   tags: init
