--- a/ansible/roles/update/tasks/main.yaml
+++ b/ansible/roles/update/tasks/main.yaml
@@ -1,7 +1,7 @@
 - name: Run skale node update
-  become: root
   shell:
-    cmd: "skale node update --yes --env-file {{ base_path }}/init-env"
+    cmd: "skale node update --env-file {{ base_path }}/init-env --yes"
+    # cmd: "skale node update --yes"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
