--- a/ansible/main.yaml
+++ b/ansible/main.yaml
@@ -1,5 +1,5 @@
 - import_playbook: base.yaml
 - import_playbook: setup.yaml
-- import_playbook: validators.yaml
-- import_playbook: link-addresses.yaml
-- import_playbook: register.yaml
+# - import_playbook: validators.yaml
+# - import_playbook: link-addresses.yaml
+# - import_playbook: register.yaml
