Add celery and redis services. Remove old files

--- a/ansible/update.yaml
+++ b/ansible/update.yaml
@@ -2,8 +2,8 @@
   hosts: nodes
   become: true
   roles:
-      #    - role: sources
-      #      tags: source
+    - role: sources
+      tags: source
 
     - role: update
       tags: update
