Add BACKUP_RUN, fix update

--- a/ansible/roles/update/tasks/main.yaml
+++ b/ansible/roles/update/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Run skale node update
   shell:
-    cmd: "skale node update --env-file {{ base_path }}/init-env --yes"
+    cmd: "skale node update {{ base_path }}/init-env --yes"
     # cmd: "skale node update --yes"
   environment:
     LANG: en_US.utf-8
