--- a/ansible/roles/update/tasks/main.yaml
+++ b/ansible/roles/update/tasks/main.yaml
@@ -16,7 +16,7 @@
     dest: "{{ base_path }}/.skale/config/filestorage_info.json"
   delegate_to: "{{ inventory_hostname }}"
 
-- name: Sync filestorage_info.json
+- name: Sync static_schain_params.json
   synchronize:
     src: "{{ base_path }}/skale-node/static_schain_params.json"
     dest: "{{ base_path }}/.skale/config/static_schain_params.json"
