Add register_again playbook. Refactor update

--- a/ansible/roles/cleanup/tasks/main.yaml
+++ b/ansible/roles/cleanup/tasks/main.yaml
@@ -1,13 +1,15 @@
-# - name: Cleanup contracts
-#   script: cleanup_contracts.py
-#   run_once: yes
-#   environment:
-#     BASE_DIR: "{{ base_path }}"
-#     ETH_PRIVATE_KEY: "{{ eth_private_key }}"
-#     ENDPOINT: "{{ endpoint }}"
-#   args:
-#     executable: python3
-#     tags: cleanup
+- name: Cleanup contracts
+  script: cleanup_contracts.py
+  run_once: yes
+  environment:
+    BASE_DIR: "{{ base_path }}"
+    ETH_PRIVATE_KEY: "{{ eth_private_key }}"
+    ENDPOINT: "{{ endpoint }}"
+  args:
+    executable: python3
+  tags:
+    - cleanup
+    - cleanup_contracts
 
 - name: Get all container ids
   command: "docker ps -aq"
