--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ ansible/files/base-keys.txt
 ansible/files/validator-ids.txt
 ansible/terraform/do/hosts
 ansible/terraform/aws/hosts
-ansible.cfg
+ansible/ansible.cfg
+ansible/sgx/ansible.cfg
 
 # other
 .ropeproject/
