Add docker-compose installation

--- a/ansible/roles/base_provision/tasks/main.yaml
+++ b/ansible/roles/base_provision/tasks/main.yaml
@@ -40,3 +40,10 @@
     name: docker==4.2.0
   tags:
     pip
+
+- name: Install docker-compose
+  pip:
+    name: docker-compose==1.27.4
+  tags:
+    - pip
+    - docker-compose
