--- a/ansible/roles/init/tasks/main.yaml
+++ b/ansible/roles/init/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Run skale node init
-  command: 
-    cmd: "skale node init {{ base_path }}/init-env --install-deps"
+  command:
+    cmd: "skale node init {{ base_path }}/init-env"
   environment:
     LANG: en_US.utf-8
     LC_ALL: en_US.utf-8
