SKALE-3529 Fix cleanup tasks. Add new playbooks

--- a/ansible/cleanup.yaml
+++ b/ansible/cleanup.yaml
@@ -1,5 +1,2 @@
-- name: Cleanup node
-  hosts: nodes
-  become: true
-  roles:
-    - role: cleanup
+- import_playbook: cleanup_contracts.yaml
+- import_playbook: cleanup_nodes.yaml
