--- a/ansible/reset.yaml
+++ b/ansible/reset.yaml
@@ -1,5 +1,6 @@
 - import_playbook: cleanup.yaml
 - import_playbook: setup.yaml
-- import_playbook: validators.yaml
+- import_playbook: validator.yaml
+- import_playbook: signature.yaml
 - import_playbook: link-addresses.yaml
 - import_playbook: register.yaml
