--- a/ansible/roles/sources/tasks/main.yaml
+++ b/ansible/roles/sources/tasks/main.yaml
@@ -33,6 +33,7 @@
     src: "{{ skale_node_cli_path }}"
     dest: "{{ base_path }}"
   when: env is defined and env == "dev"
+  tags: cli
 
 - name: Replace skale-node docker-compose file
   template:
