--- a/local/vagrant/Vagrantfile
+++ b/local/vagrant/Vagrantfile
@@ -1,19 +1,28 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+# servers = [1, 2, 3]
+
+# n_of_servers = ENV['NUM_OF_VMS']
+n_of_servers = 2
+
 Vagrant.configure("2") do |config|
-    servers.each do |machine|
+    for i in 1..n_of_servers
+        # puts "I: #{i}"
+        # puts "I: #{i}"
+        # puts "I: #{i}"
+
         config.vm.box = "hashicorp/bionic64"
-        config.vm.network "public_network"
+        config.vm.network "public_network", bridge: "eno1"
 
         config.vm.provider "virtualbox" do |v|
-        file_to_disk = 'disk2.vdi'
+        file_to_disk = "disk_#{i}.vdi"
         unless File.exist?(file_to_disk)
             v.customize ['createhd', '--filename', file_to_disk, '--size', 50 * 1024]
         end
         v.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', file_to_disk]
         end
 
-        config.vm.network :forwarded_port, guest: 22, host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true
+        config.vm.network :forwarded_port, guest: 22, host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true, bridge: "eno1"
     end
 end
