--- a/local/vagrant/Vagrantfile
+++ b/local/vagrant/Vagrantfile
@@ -1,28 +1,28 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# servers = [1, 2, 3]
+VAGRANTFILE_API_VERSION = "2"
 
-# n_of_servers = ENV['NUM_OF_VMS']
-n_of_servers = 2
+Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
+    config.vm.box = "hashicorp/bionic64"
+    (1..3).each do |i|
+        config.vm.define "node-#{i}" do |node|
+            node.vm.network "public_network", bridge: "eno1"
+            node.vm.network :forwarded_port, guest: 22, host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true, bridge: "eno1"
 
-Vagrant.configure("2") do |config|
-    for i in 1..n_of_servers
-        puts "I: #{i}"
-        puts "I: #{i}"
-        puts "I: #{i}"
+            node.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/me.pub"
 
-        config.vm.box = "hashicorp/bionic64"
-        config.vm.network "public_network", bridge: "eno1"
-
-        config.vm.provider "virtualbox" do |v|
-        file_to_disk = "disk_#{i}.vdi"
-        unless File.exist?(file_to_disk)
-            v.customize ['createhd', '--filename', file_to_disk, '--size', 50 * 1024]
-        end
-        v.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', file_to_disk]
-        end
-
-        config.vm.network :forwarded_port, guest: 22, host: 2222, host_ip: "0.0.0.0", id: "ssh", auto_correct: true, bridge: "eno1"
+            file_for_disk = "./large_disk#{i}.vdi"
+            node.vm.provider "virtualbox" do |v|
+               unless File.exist?(file_for_disk)
+                   v.customize ['createhd', 
+                                '--filename', file_for_disk, 
+                                '--size', 80 * 1024]
+                   v.customize ['storageattach', :id, 
+                                '--storagectl', 'SATA Controller', 
+                                '--port', 1, '--device', 0, '--type', 'hdd', '--medium', file_for_disk]
+               end
+           end
+       end
     end
 end
